--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,19 +4,29 @@ body {
 }
 
 p {
-    color: red;
+    color: rgb(0, 0, 0);
 }
 
 h1 {
-    font-family: 'Agbalumo';
+    font-family: 'Poppins';
     font-size: 36pt;
 }
 main, header, footer, nav ul {
-    max-width: 40rem;
+    max-width: 100rem;
     margin: 0 auto 0 auto;
 }
 main {
-    background-color: bisque;
+    background-color: rgb(255, 255, 255);
+}
+
+footer {
+    border-top: 2px solid #ccc;   
+    margin-top: 10px;             
+    padding: 10px 0;             
+    font-size: 16px;              
+    color: #333;             
+    text-align: left;         
+    width: 100%;
 }
 
 /* nav ul li {
@@ -26,20 +36,21 @@ main {
     margin: 1em;
 } */
 
-header {
-    background-image: url("../img/polacks.jpg");
+/*header {
+     background-image: url("../img/polacks.jpg");
     background-size: cover;
     overflow: hidden;
     width: 100%;
     height: 200px;
     opacity: 0.5;
+    position: relative
 }
 
 header h1 {
     width:40rem;
     margin: 0 auto;
     text-align: center;
-}
+}*/
 
 nav ul {
     display: grid;
@@ -61,4 +72,62 @@ nav li {
 .Master {
     color: green;
     font-weight: bold;
+}
+
+.allergy {
+    font-weight: bold;
+}
+
+#header-image {
+    margin: 20px;
+    overflow: hidden;
+    position: relative;   
+}
+
+#header-image img {
+    width: 100%;
+    height: 80%;
+    display: block;
+    opacity: 0.5;
+}
+
+#header-image h1 {    
+    position: absolute;
+    left: 25%;
+    margin-top: -500px;
+    text-align: center;
+}
+
+button {
+    background-color: #eee;
+    border: 2px solid #999;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 6px;
+    cursor: pointer;
+    margin: 20px;
+}
+
+.button:hover {
+    background-color: #555555;
+    color: white;
+}
+
+section {
+    margin: 20px;
+    padding: 20px;    
+    border: 5px dashed #696868;
+    border-radius: 10px;
+}
+
+#burger-section {
+    background-color: #111;
+    color: white;
+}
+
+.burger-grid {
+    display: grid;
+    grid-template-columns: 500px 500px 500px;; 
+    gap: 20px;
+    text-align: left;
 }
